error type added